# bottlerocket-settings-sdk

./: Cargo.toml
bottlerocket-settings-sdk/: Cargo.toml
bottlerocket-settings-sdk/model-derive/src/: lib.rs
bottlerocket-settings-sdk/src/: error.rs  lib.rs  model.rs
bottlerocket-settings-sdk/src/cli/: mod.rs  proto1.rs
bottlerocket-settings-sdk/src/extension/: mod.rs  proto1.rs
bottlerocket-settings-sdk/src/extension/proto1/: mod.rs
sample-setting-handler/: Cargo.toml  motd.toml
sample-setting-handler/src/: main.rs  v1.rs  v2.rs
