[package]
name = "bottlerocket-settings-sdk"
version = "0.1.0"
edition = "2021"

[dependencies]
clap = { version = "4.1", features = ["derive"] }

serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
snafu = "0.7.4"

scalar = { path = "scalar" }
scalar-derive = { path = "scalar-derive" }
model-derive = { path = "model-derive" }
