[package]
name = "sample-setting-handler"
version = "0.1.0"
edition = "2021"

[dependencies]
bottlerocket-settings-sdk = { path =  "../bottlerocket-settings-sdk", version = "*" }

anyhow = "1.0.69"
lazy_static = "1.0"
maplit = "1.0.2"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

